--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:56:21 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:57:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ E thru 12</td>
 E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -165,11 +165,11 @@ Not started</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Talor Gooch -1
--1 thru 3</td>
+-1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -248,8 +248,8 @@ Not started</td>
 +2 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout">Xander Schauffele(W) +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele(W) +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -280,8 +280,8 @@ E thru 12</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -309,11 +309,11 @@ Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Will Zalatoris +1
 +2 thru 12</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -342,10 +342,10 @@ Not started</td>
 E thru 12</td>
       <td>Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Billy Horschel +5
+      <td class="greyout leftborder">Billy Horschel +5
 +3 thru 12</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -355,7 +355,7 @@ E thru 10</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Talor Gooch -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
@@ -423,7 +423,7 @@ E thru 10</td>
       <td>Shane Lowry +1
 E thru 2</td>
       <td class="greyout leftborder">Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -438,10 +438,10 @@ Missed Cut</td>
 +1 thru 1</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Sam Burns +5
+      <td class="greyout leftborder">Sam Burns +5
 +2 thru 13</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -451,7 +451,7 @@ E thru 12</td>
       <td>Corey Conners(W) -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -467,13 +467,13 @@ Not started</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -486,10 +486,10 @@ E thru 12</td>
 Not started</td>
       <td>Marc Leishman +2
 +1 thru 14</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -517,7 +517,7 @@ Not started</td>
       <td>Shane Lowry +1
 E thru 2</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -547,7 +547,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 12</td>
       <td>Jordan Spieth(W) +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -565,7 +565,7 @@ Not started</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
@@ -584,8 +584,8 @@ E thru 12</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -595,7 +595,7 @@ E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Rory McIlroy(W) +2
 +1 thru 10</td>
       <td class="greyout leftborder">Viktor Hovland +2
@@ -616,8 +616,8 @@ Not started</td>
 E thru 12</td>
       <td class="greyout leftborder">Webb Simpson +2
 +3 thru 14</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -629,7 +629,7 @@ E thru 12</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Paul Casey
@@ -643,13 +643,13 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Brooks Koepka +3
 E thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -661,7 +661,7 @@ E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout">Jon Rahm +2
@@ -671,17 +671,17 @@ E thru 12</td>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td>Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Sam Burns +5
+      <td class="greyout leftborder">Sam Burns +5
 +2 thru 13</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -691,13 +691,13 @@ E thru 10</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -712,8 +712,8 @@ E thru 12</td>
 E thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -723,7 +723,7 @@ E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Jordan Spieth(W) +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -742,16 +742,16 @@ Not started</td>
 +1 thru 1</td>
       <td>Rory McIlroy(W) +2
 +1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Shane Lowry(W) +1
@@ -776,8 +776,8 @@ E thru 12</td>
 +2 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -792,8 +792,8 @@ E thru 2</td>
 E thru 12</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -803,7 +803,7 @@ E thru 12</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -819,13 +819,13 @@ E thru 12</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Brooks Koepka +3
 E thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -833,15 +833,15 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -856,8 +856,8 @@ E thru 10</td>
 +2 thru 11</td>
       <td class="greyout leftborder">Rory McIlroy +2
 +1 thru 10</td>
-      <td class="greyout">Xander Schauffele(W) +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele(W) +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -865,7 +865,7 @@ E thru 10</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td>Viktor Hovland +2
@@ -904,8 +904,8 @@ E thru 12</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -929,15 +929,15 @@ Not started</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -961,7 +961,7 @@ Not started</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland(W) +2
 +2 thru 11</td>
       <td>Jon Rahm +2
@@ -982,10 +982,10 @@ E thru 12</td>
 E thru 12</td>
       <td>Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -998,8 +998,8 @@ Not started</td>
 E thru 10</td>
       <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -1007,7 +1007,7 @@ Missed Cut</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">6</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td>Viktor Hovland +2
@@ -1023,7 +1023,7 @@ Not started</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">6</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td>Jon Rahm(W) +2
@@ -1036,26 +1036,10 @@ E thru 10</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">7</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td>Justin Thomas(W) +4
-Not started</td>
-      <td>Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 13</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">8</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td>Jon Rahm +2
@@ -1064,22 +1048,38 @@ E thru 12</td>
 E thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td>Justin Thomas(W) +4
+Not started</td>
+      <td>Sam Burns +5
++2 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">9</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -1092,10 +1092,10 @@ E thru 12</td>
 +2 thru 11</td>
       <td>Brooks Koepka +3
 E thru 10</td>
-      <td>Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td>Justin Thomas +4
 Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
