--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:56:21 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:57:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,9 +149,9 @@ Not started</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
+-1 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
       <td class="greyout">Sam Burns +5
 +2 thru 13</td>
     </tr>
@@ -200,8 +200,8 @@ E thru 12</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -225,13 +225,13 @@ Not started</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Joaquin Niemann -3
-Not started</td>
+E thru 1</td>
+      <td>Tommy Fleetwood(W) +2
+-1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td>Rory McIlroy +2
+      <td class="greyout leftborder">Rory McIlroy +2
 +1 thru 10</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -261,7 +261,7 @@ Not started</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
@@ -293,7 +293,7 @@ E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Robert MacIntyre +2
@@ -307,7 +307,7 @@ E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Jordan Spieth(W) +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -323,13 +323,13 @@ E thru 10</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -337,7 +337,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td>Shane Lowry +1
@@ -356,10 +356,10 @@ E thru 10</td>
 +1 thru 17</td>
       <td>Russell Henley +2
 +1 thru 17</td>
-      <td>Xander Schauffele(W) +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td>Justin Thomas +4
 Not started</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +5
++3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -369,13 +369,13 @@ Missed Cut</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Jordan Spieth +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
