--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:02:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:03:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -197,7 +197,7 @@ Not started</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Tyrrell Hatton E
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 11</td>
       <td class="greyout">Sam Burns +5
@@ -444,6 +444,22 @@ E thru 12</td>
 +3 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -1
++1 thru 17</td>
+      <td>Webb Simpson +1
++2 thru 15</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 12</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
@@ -602,22 +618,6 @@ E thru 12</td>
 +2 thru 11</td>
       <td class="greyout">Jon Rahm +2
 E thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -1
-+1 thru 17</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Jon Rahm(W) +2
-E thru 12</td>
-      <td class="greyout leftborder">Webb Simpson +2
-+3 thru 14</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
