--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:07:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:07:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -3
-+1 thru 2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Matthew Fitzpatrick -1
-E thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
-    </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-8</td>
@@ -167,7 +151,7 @@ Not started</td>
       <td>Talor Gooch -1
 -1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -186,6 +170,22 @@ E thru 12</td>
 E thru 3</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -3
++1 thru 2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Matthew Fitzpatrick E
++1 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -217,7 +217,7 @@ E thru 3</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -233,7 +233,7 @@ Not started</td>
       <td class="greyout leftborder">Russell Henley +3
 +2 (F)</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -265,7 +265,7 @@ E thru 3</td>
       <td class="greyout leftborder">Will Zalatoris +1
 +2 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -279,7 +279,7 @@ E thru 12</td>
       <td>Adam Scott +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -325,7 +325,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 thru 14</td>
       <td class="greyout">Louis Oosthuizen
@@ -341,7 +341,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Billy Horschel +4
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +5
@@ -361,7 +361,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -412,22 +412,6 @@ E thru 3</td>
 E thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson(W) -2
-+1 thru 13</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-E thru 10</td>
-      <td>Shane Lowry +1
-E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
@@ -473,7 +457,7 @@ E thru 12</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -492,20 +476,20 @@ E thru 12</td>
 +3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Matthew Fitzpatrick -1
-E thru 10</td>
+      <td>Dustin Johnson(W) -2
++1 thru 13</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Matthew Fitzpatrick E
++1 thru 11</td>
       <td>Shane Lowry +1
 E thru 3</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 11</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -519,9 +503,9 @@ E thru 3</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -535,9 +519,9 @@ E thru 3</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -551,7 +535,7 @@ E thru 12</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Sam Burns +5
 +2 thru 14</td>
     </tr>
@@ -569,7 +553,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -583,7 +567,7 @@ E thru 12</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -629,9 +613,9 @@ E thru 12</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -661,7 +645,7 @@ E thru 1</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +5
@@ -679,7 +663,7 @@ E thru 10</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -693,9 +677,9 @@ E thru 12</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -711,9 +695,25 @@ Not started</td>
       <td>Marc Leishman +3
 +2 thru 15</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Matthew Fitzpatrick E
++1 thru 11</td>
+      <td>Shane Lowry +1
+E thru 3</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Justin Thomas(W) +4
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -729,7 +729,7 @@ E thru 12</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -743,7 +743,7 @@ Not started</td>
       <td>Rory McIlroy(W) +2
 +1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -791,7 +791,7 @@ E thru 2</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -807,9 +807,9 @@ Not started</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -821,9 +821,9 @@ E thru 12</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -839,7 +839,7 @@ E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -889,7 +889,7 @@ E thru 12</td>
       <td class="greyout leftborder">Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -903,7 +903,7 @@ E thru 12</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -919,7 +919,7 @@ E thru 10</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Gary Woodland +8
 +5 (F)</td>
     </tr>
@@ -935,7 +935,7 @@ E thru 12</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -951,9 +951,9 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -967,9 +967,9 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Patrick Reed +3
-+1 thru 16</td>
++1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -981,9 +981,9 @@ E thru 12</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -995,9 +995,9 @@ Not started</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td>Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +5
 +3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
@@ -1015,7 +1015,7 @@ Missed Cut</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Sam Burns +5
 +2 thru 14</td>
     </tr>
@@ -1031,9 +1031,9 @@ E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -1045,9 +1045,9 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -1059,7 +1059,7 @@ Not started</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td>Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td>Sam Burns +5
 +2 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +5
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +5
 +3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
@@ -1091,9 +1091,9 @@ E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td>Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +5
 +3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
