--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:07:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:07:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -183,9 +183,9 @@ E thru 12</td>
       <td>Viktor Hovland(W) +2
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -199,7 +199,7 @@ E thru 12</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -217,7 +217,7 @@ E thru 3</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -233,23 +233,7 @@ E thru 1</td>
       <td class="greyout leftborder">Rory McIlroy +2
 +1 thru 10</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Matthew Fitzpatrick -1
-E thru 10</td>
-      <td>Shane Lowry +1
-E thru 3</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -265,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -279,9 +263,25 @@ E thru 2</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Matthew Fitzpatrick E
++1 thru 11</td>
+      <td>Shane Lowry +1
+E thru 3</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Justin Thomas(W) +4
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -313,7 +313,7 @@ E thru 12</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -327,7 +327,7 @@ E thru 10</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
     </tr>
@@ -345,7 +345,7 @@ E thru 3</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -357,7 +357,7 @@ E thru 10</td>
       <td>Russell Henley +3
 +2 (F)</td>
       <td>Justin Thomas +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele(W) +5
 +3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
@@ -373,7 +373,7 @@ Missed Cut</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Justin Thomas(W) +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +5
 +3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
@@ -389,9 +389,9 @@ Missed Cut</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Brooks Koepka +3
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Patrick Reed +3
-+1 thru 16</td>
++1 thru 17</td>
       <td class="greyout">Luke List +5
 E thru 4</td>
     </tr>
