--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:08:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:09:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -390,10 +390,10 @@ E thru 12</td>
 +1 (F)</td>
       <td>Robert MacIntyre +2
 +1 (F)</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -556,22 +556,6 @@ E thru 12</td>
 E thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 11</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
@@ -580,12 +564,12 @@ E thru 12</td>
 +1 thru 13</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
-      <td>Rory McIlroy(W) +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 12</td>
+      <td class="greyout">Rory McIlroy(W) +4
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -732,22 +716,6 @@ E thru 12</td>
 E thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Tiger Woods E
-+1 thru 1</td>
-      <td>Rory McIlroy(W) +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
@@ -762,6 +730,22 @@ E thru 3</td>
 +1 thru 6</td>
       <td class="greyout">Sam Burns +5
 +2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Viktor Hovland +2
++2 thru 11</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -812,6 +796,22 @@ E thru 11</td>
 E thru 1</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Tiger Woods E
++1 thru 1</td>
+      <td>Rory McIlroy(W) +4
++3 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas +4
+E thru 1</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">2</td>
       <td>Patrick Cantlay -2
@@ -854,8 +854,8 @@ E thru 11</td>
 +2 thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
       <td class="greyout">Xander Schauffele(W) +5
 +3 thru 11</td>
     </tr>
@@ -870,10 +870,10 @@ E thru 11</td>
 E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout">Bubba Watson +2
+      <td class="greyout leftborder">Bubba Watson +2
 +1 thru 16</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -886,74 +886,26 @@ E thru 12</td>
 +2 thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
       <td class="greyout">Justin Thomas +4
 E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Jon Rahm(W) +2
 E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 11</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
       <td class="greyout">Xander Schauffele +5
 +3 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa(W) E
--1 thru 13</td>
-      <td>Tiger Woods E
-+1 thru 1</td>
-      <td>Viktor Hovland +2
-+2 thru 11</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Jon Rahm(W) +2
-E thru 12</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td>Jon Rahm +2
-E thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -972,19 +924,19 @@ E thru 11</td>
 +1 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">5</td>
-      <td>Patrick Cantlay(W) -2
-E thru 12</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 E thru 1</td>
-      <td class="greyout">Xander Schauffele +5
+      <td class="greyout">Rory McIlroy +4
 +3 thru 11</td>
     </tr>
     <tr>
@@ -1020,6 +972,38 @@ E thru 1</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa(W) E
+-1 thru 13</td>
+      <td>Tiger Woods E
++1 thru 1</td>
+      <td>Viktor Hovland +2
++2 thru 11</td>
+      <td>Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas +4
+E thru 1</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jordan Spieth +1
+-1 thru 11</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td>Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas +4
+E thru 1</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">6</td>
       <td>Jordan Spieth +1
@@ -1034,6 +1018,22 @@ E thru 12</td>
 E thru 11</td>
       <td class="greyout">Justin Thomas +4
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">7</td>
+      <td>Patrick Cantlay(W) -2
+E thru 12</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td>Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas +4
+E thru 1</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -1052,22 +1052,6 @@ E thru 1</td>
 +3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">8</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td>Justin Thomas(W) +4
-E thru 1</td>
-      <td>Sam Burns +5
-+2 thru 14</td>
-      <td class="greyout leftborder">Xander Schauffele +5
-+3 thru 11</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">9</td>
       <td>Jordan Spieth +1
@@ -1082,6 +1066,22 @@ E thru 1</td>
 +3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">10</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td>Rory McIlroy +4
++3 thru 11</td>
+      <td>Sam Burns +5
++2 thru 14</td>
+      <td class="greyout leftborder">Xander Schauffele +5
++3 thru 11</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
