--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:08:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:09:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,22 +188,6 @@ E thru 11</td>
 E thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -3
-+1 thru 2</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -220,6 +204,22 @@ E thru 12</td>
 E thru 1</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -3
++1 thru 2</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout">Xander Schauffele +5
++3 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
@@ -230,10 +230,10 @@ E thru 1</td>
 -1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 E thru 1</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
