--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:09:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:09:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -307,7 +307,7 @@ Not started</td>
       <td>Cameron Smith -3
 +1 thru 2</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
       <td class="greyout leftborder">Will Zalatoris +1
@@ -357,7 +357,7 @@ E thru 11</td>
       <td>Talor Gooch -1
 -1 thru 4</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 12</td>
       <td class="greyout">Brooks Koepka +3
@@ -403,7 +403,7 @@ E thru 12</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry +1
 E thru 3</td>
       <td class="greyout leftborder">Viktor Hovland +2
@@ -579,7 +579,7 @@ E thru 12</td>
       <td>Collin Morikawa(W) E
 -1 thru 13</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -675,7 +675,7 @@ E thru 1</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td>Marc Leishman +3
 +2 thru 15</td>
       <td class="greyout leftborder">Justin Thomas +4
@@ -785,7 +785,7 @@ E thru 1</td>
       <td>Patrick Cantlay -2
 E thru 12</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
       <td>Jon Rahm(W) +2
@@ -801,7 +801,7 @@ E thru 1</td>
       <td>Cameron Smith -3
 +1 thru 2</td>
       <td>Hideki Matsuyama E
-Not started</td>
+E thru 1</td>
       <td>Tiger Woods E
 +1 thru 1</td>
       <td>Rory McIlroy(W) +4
