--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:09:59 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:10:42 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ Not started</td>
 +1 (F)</td>
       <td>Jordan Spieth +1
 -1 thru 11</td>
-      <td class="greyout leftborder">Xander Schauffele +5
-+3 thru 11</td>
-      <td class="greyout">Sam Burns +5
+      <td class="greyout leftborder">Sam Burns +5
 +2 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -216,8 +216,8 @@ E thru 12</td>
 E thru 11</td>
       <td class="greyout leftborder">Rory McIlroy +4
 +3 thru 11</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -328,8 +328,8 @@ E thru 11</td>
 +2 thru 11</td>
       <td class="greyout leftborder">Justin Thomas +4
 E thru 1</td>
-      <td class="greyout">Xander Schauffele +5
-+3 thru 11</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -358,8 +358,8 @@ E thru 11</td>
 +2 (F)</td>
       <td>Justin Thomas +4
 E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +5
-+3 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +6
++4 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -374,8 +374,8 @@ Missed Cut</td>
 E thru 12</td>
       <td>Justin Thomas(W) +4
 E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele +5
-+3 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
